--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,19 @@
     font-weight: 300;
 }
 
+.ib-nav-links li a:hover{
+  color: #214AA4 !important;
+}
 
+input[type="text"]::placeholder {
 
+                /* Firefox, Chrome, Opera */
+                text-align: center;
+            }
+
+input{
+  border-radius: 4px;
+}
 
 
 
